--- a/codes/R_basic_mlm.Rmd
+++ b/codes/R_basic_mlm.Rmd
@@ -3,6 +3,9 @@ title: "Running Basic Multilevel Models in R with `lme4`"
 output:
   html_notebook:
     toc: yes
+  html_document:
+    df_print: paged
+    toc: yes
   pdf_document:
     toc: yes
 date: "`r format(Sys.time(), '%B %d, %Y')`"
@@ -434,7 +437,8 @@ You can summarize the results using
 summary(crlv_int)
 predict(crlv_int, data.frame(meanses = .17, 
                              ses_cmc = -.17, 
-                             sector = 1), re.form = NA)
+                             sector = 1, 
+                             id = "1224"))
 ```
 
 ## Plotting the Interactions
@@ -464,19 +468,19 @@ sjPlot::plot_model(crlv_int, type = "pred", terms = c("ses_cmc", "sector"))
 This can be done with the `texreg` package:
 
 ```{r}
-texreg::screenreg(list(ran_int, m_lv2, contextual, ran_slp, crlv_int))
+texreg::screenreg(list(ran_int, m_lv2, decompose, ran_slp, crlv_int))
 ```
 
 Or in HTML output:
 
 ```{r, results='asis'}
-texreg::htmlreg(list(ran_int, m_lv2, contextual, ran_slp, crlv_int))
+texreg::htmlreg(list(ran_int, m_lv2, decompose, ran_slp, crlv_int))
 ```
 
 Or in PDF:
 
 ```{r, results='asis'}
-texreg::texreg(list(ran_int, m_lv2, contextual, ran_slp, crlv_int), 
+texreg::texreg(list(ran_int, m_lv2, decompose, ran_slp, crlv_int), 
                custom.gof.names = c("AIC", "BIC", "LL", "N", "J", 
                                     "$\\tau_{00}$", "$\\sigma^2$",
                                     "$\\tau_{11}$", "$\\tau_{01}$"))
@@ -485,7 +489,7 @@ texreg::texreg(list(ran_int, m_lv2, contextual, ran_slp, crlv_int),
 # Model Comparison
 
 ```{r}
-AIC(refitML(ran_int), refitML(m_lv2), refitML(contextual), 
+AIC(refitML(ran_int), refitML(m_lv2), refitML(decompose), 
     refitML(ran_slp), refitML(crlv_int))
 ```
 
