--- a/codes/R_basic_mlm.Rmd
+++ b/codes/R_basic_mlm.Rmd
@@ -302,6 +302,13 @@ the same as the contextual effect model. The estimated contextual effect is
 the coefficient of `meanses` minus the coefficient of `ses_cmc`, which is the 
 same as what you will get in the contextual effect model
 
+### Joint test of fixed effects
+
+```{r}
+anova(decompose, ran_int, ddf = "Satterthwaite")
+```
+
+
 # 5. Run the Random-Coefficients Model
 
 ## Explore Variations in Associations
