--- a/codes/R_basic_mlm.Rmd
+++ b/codes/R_basic_mlm.Rmd
@@ -302,12 +302,38 @@ the same as the contextual effect model. The estimated contextual effect is
 the coefficient of `meanses` minus the coefficient of `ses_cmc`, which is the 
 same as what you will get in the contextual effect model
 
-### Joint test of fixed effects
+### Linear contrast test of fixed effects
+
+Difference in coefficients:
+
+$$H_0: \gamma_\texttt{meanses} = \gamma_\texttt{ses\_cmc}$$
+
+is the same as 
+
+$$H_0: \gamma_\texttt{meanses} - \gamma_\texttt{ses\_cmc} = 0$$
 
 ```{r}
-anova(decompose, ran_int)
+library(lmerTest)
+decompose <- lmer(mathach ~ meanses + ses_cmc + (1 | id), data = hsball)
+# contrast 1: (-1) * 2nd coefficient + (1) * 3rd coefficient = 0
+L <- rbind(c(0, 1, -1))
+contest(decompose, L = L)
 ```
 
+Joint test of coefficients:
+
+$$H_0: \begin{cases}
+          \gamma_\texttt{meanses} = 0, \; \text{and} \\
+          \gamma_\texttt{ses\_cmc} = 0
+       \end{cases}$$
+
+```{r}
+library(lmerTest)
+decompose <- lmer(mathach ~ meanses + ses_cmc + (1 | id), data = hsball)
+L <- rbind(c(0, 1, 0),  # contrast 1: 2nd fixed effect = 0
+           c(0, 0, 1))  # contrast 2: 3nd fixed effect = 0
+contest(decompose, L = L)
+```
 
 # 5. Run the Random-Coefficients Model
 
